# rill-examples

./: .gitignore  README.md  rill.yaml
rest-api/: rill.yaml
rill-github-analytics/: .gitignore  README.md  download.py  download_commits.py  generate_project.py  pyproject.toml  rill.yaml  setup_repo.py
rill-github-analytics/.rillcloud/: project_stage.yaml
rill-github-analytics/apis/: api.yaml
rill-github-analytics/dashboards/: clickhouse_commits_explore.yaml  duckdb_commit_files.yaml  duckdb_commits.yaml  duckdb_commits_explore.yaml  duckdb_commits_model_metrics_explore.yaml  mcp_servers_commits_explore.yaml  repo_compare_canvas.yaml  rill_commit_files.yaml  rill_commits.yaml  rill_commits_explore.yaml  rill_commits_model_metrics_explore.yaml  wandb_commits.yaml
rill-github-analytics/metrics/: clickhouse_commits_metrics.yaml  duckdb_commits_metrics.yaml  duckdb_commits_model_metrics.yaml  mcp_servers_commits_metrics.yaml  rill_commits_metrics.yaml  rill_commits_model_metrics.yaml  wandb_commits_metrics.yaml
rill-github-analytics/models/: clickhouse_commits_model.sql  duckdb_commit_files_model.sql  duckdb_commits_model.sql  mcp_servers_commits_model.sql  rill_commit_files_model.sql  rill_commits_model.sql  wandb_commits_model.sql
rill-github-analytics/sources/: clickhouse_commits_source.yaml  clickhouse_modified_files.yaml  duckdb_commit_details_source.yaml  duckdb_commits_source.yaml  duckdb_modified_files.yaml  mcp_servers_commits_source.yaml  mcp_servers_modified_files.yaml  rill_commit_details_source.yaml  rill_commits_source.yaml  rill_modified_files.yaml  (+2 more)
(+592 files in other folders)
